--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <h1>Website Under Construction</h1>
-        <p>We are currently working hard to bring you an awesome experience. Stay tuned!</p>
+        <p>We are currently working hard to bring you an awesome experience. Stay tuned!
+        </p>
+        <p>Siddhant Anand</p>
     </div>
     <canvas id="matrix"></canvas>
     <script src="webpage.js"></script>
